Move change password to subroute
