# src/routes/account/index.ts
@@ -2,13 +2,13 @@ import {Router} from 'express';
 import register from './register';
 import login from './login';
 import refresh from './refresh';
-import change_password from './change_password';
+import settings from './settings';
 
 const router = Router();
 
 router.use('/register', register);
 router.use('/login', login);
 router.use('/refresh', refresh);
-router.use('/change_password', change_password);
+router.use('/settings', settings);
 
 export default router;
